# bird-net_mil

./: .gitignore  MIL_Heads.ipynb  README.md  analyze.py  analyze_dataset_coverage.py  app.py  compare_embeddings.py  embed_all.py  mil_train.py  pyproject.toml
bash/: attention_maps.sh  embed.sh  eval_mil.sh  scratch_0_1.sh  train_mil.sh  train_mil_scratch.sh  train_mil_scratch_0_1.sh  train_test.sh
birdnetv3/: __init__.py  embed_all.py  model_loader.py  utils_audio.py
configs/: default.yaml
docs/: README.md  TRAINING_EVALUATION.md  train_test_split_and_weak_labels.md
example/: soundscape.embeddings.npz
mil/: __init__.py  datasets.py  evaluate.py  heads.py  train.py
old_scripts/: analyze.py  analyze_embeddings_only.py  app.py  mil_utils.py  requirements.txt  single_file_run_mil.py  your_poolers.py
scripts/: analyse_data_coverage.py  build_labels_csv.py  create_train_test_split.py  evaluate_mil.py  export_embeddings.py  plot_attention.py  scratch_train_test.py  train_mil.py
tests/: test_analyse_data_coverage.py  test_datasets.py  test_embeddings.py  test_integration.py  test_mil_heads.py  test_new_features.py  test_train_test_split.py
